added improvements proposed by Jakub Szota :)

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url = jdbc:postgresql://localhost:4400/postgres
+spring.datasource.url = jdbc:postgresql://localhost:4999/postgres
 
 # Username and password
 spring.datasource.username = postgres
@@ -10,6 +10,7 @@ spring.datasource.validationQuery = SELECT 1
 # Show or not log for each sql query
 spring.jpa.show-sql = true
 
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 # Hibernate ddl auto (create, create-drop, update): with "update" the database
 # schema will be automatically updated accordingly to java entities found in
 # the project
